--- a/apps/web/src/styles/customPopup.module.scss
+++ b/apps/web/src/styles/customPopup.module.scss
@@ -108,6 +108,8 @@
 }
 .main_content {
   overflow-y: scroll;
+  width: 100%;
+  height: 100%;
 }
 .main_content::-webkit-scrollbar {
   display: none;
