--- a/apps/web/src/styles/customPopup.module.scss
+++ b/apps/web/src/styles/customPopup.module.scss
@@ -82,8 +82,8 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px;
-  background-color: #d0d5dd;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 5px 1px;
 }
 .mainContent {
   padding-top: 10px;
