--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -14,26 +14,29 @@
   gap: 20px;
 }
 
-.topHeading{
+.topHeading {
   // background-color: aqua;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.heading{
+
+.heading {
   display: flex;
   flex-direction: row;
   gap: 15px;
   align-items: center;
 }
-.subHeading{
+
+.subHeading {
   display: flex;
   flex-direction: row;
   gap: 7px;
   align-items: center;
 }
-.emptyDataHandling{
+
+.emptyDataHandling {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,13 +44,13 @@
   gap: 2px;
 }
 
-.textmin{
+.textmin {
   padding: 10px;
   font-weight: 400;
   font-size: 14px;
 }
 
-.textmax{
+.textmax {
   font-weight: 700;
   font-size: 16px;
 }
@@ -58,9 +61,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* Adjust the alpha value as needed */
-  z-index: 999; /* Ensure the overlay appears above other content */
-  display: none; /* Initially hide the overlay */
+  background-color: rgba(0, 0, 0, 0.6);
+  /* Adjust the alpha value as needed */
+  z-index: 999;
+  /* Ensure the overlay appears above other content */
+  display: none;
+  /* Initially hide the overlay */
 }
 
 
@@ -68,18 +74,21 @@
 .scrollable_table {
   width: 100%;
   height: 100%;
-  padding: 10px 10px; /* Adjust padding */
+  padding: 10px 10px;
+  /* Adjust padding */
   gap: 12px;
   border-collapse: collapse;
 
   th,
   td {
-    padding: 10px 10px 10px 24px; /* Adjust padding */
+    padding: 10px 10px 10px 24px;
+    /* Adjust padding */
     text-align: left;
     font-weight: 500;
     // border: 0px 0px 1px;
     font-size: 12px;
-    border: none; /* Remove borders */
+    border: none;
+    /* Remove borders */
     border-bottom: 0.1px solid #f0f0f0;
   }
 
@@ -96,6 +105,7 @@
       }
     }
   }
+
   td:hover,
   tr:hover {
     /* Add hover styles if needed */
@@ -147,6 +157,11 @@
   width: 90%;
   height: 70%;
   margin-left: 20px;
+}
+
+.imageAdd {
+  display: flex;
+  justify-content: center;
 }
 
 .footer {
