--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -341,3 +341,35 @@
     opacity: 0.9;
   
   }
+
+  
+  .boqSubCategoryTable {
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px; /* Adjust padding */
+    gap: 12px;
+    border-collapse: collapse;
+  
+    th,
+    td {
+      padding: 10px 10px 10px 24px; /* Adjust padding */
+      text-align: left;
+      font-weight: 500;
+      font-size: 12px;
+      border: none; /* Remove borders */
+      border-bottom: 0.1px solid #f0f0f0;
+    }
+  
+    td {
+      border-bottom: 0.1px solid #f0f0f0;
+    }
+  
+    thead {
+      tr {
+        th {
+          color: #667085;
+          font-weight: 700;
+        }
+      }
+    }
+  }
