--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -328,9 +328,9 @@
 
 .groupButton {
   display: flex;
-  margin-top: 1%;
-  justify-content: flex-end;
-  padding-right: 10px;
+//   margin-top: 1%;
+//   justify-content: flex-end;
+//   padding-right: 10px;
 }
 
 .Secondcontainer {
