--- a/apps/web/src/styles/projectInventory.module.scss
+++ b/apps/web/src/styles/projectInventory.module.scss
@@ -11,12 +11,12 @@
     border-top: 1px solid #ccc;
     margin-bottom: 10px;
 }
-.tableContainer {
-    padding: 10px 40px 60px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
+// .tableContainer {
+//     padding: 10px 40px 60px 40px;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 20px;
+// }
 // table {
 //     border-collapse: collapse;
 //     width: 100%;
@@ -55,4 +55,49 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+}
+
+.scrollable_table {
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px; /* Adjust padding */
+    gap: 12px;
+    border-collapse: collapse;
+
+th,
+  td {
+    padding: 10px 10px 10px 24px; /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
+  }
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+}
+
+
+
+.tableHeading {
+    // background-color: linear-gradient(0deg, #EAECF0, #EAECF0);
+    // linear-gradient(0deg, #FFFFFF, #FFFFFF);
+    color: linear-gradient(0deg, #eaecf0, #eaecf0);
 }
