--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -160,37 +160,68 @@
   }
 }
 
+// .scrollable_table {
+//   width: 100%;
+//   border-collapse: collapse;
+//   height: 100%;
+
+//   th,
+//   td {
+//     border: 1px solid #000000;
+//     text-align: left;
+//     font-weight: 600;
+//     font-size: 11px;
+//   }
+
+//   thead {
+//     tr {
+//       th {
+//         background-color: #f2f2f2;
+//         text-transform: uppercase;
+//         margin-top: 10px;
+//       }
+//     }
+//   }
+
+//   td {
+//     align-items: center;
+//     text-align: center;
+//   }
+
+//   td:hover,
+//   tr:hover {
+//     background-color: rgb(239, 239, 239);
+//   }
+// }
 .scrollable_table {
   width: 100%;
-  border-collapse: collapse;
   height: 100%;
+  gap: 12px;
+  border-collapse: collapse;
 
   th,
   td {
-    border: 1px solid #000000;
+    padding: 8px 8px 8px 18px; /* Adjust padding */
     text-align: left;
-    font-weight: 600;
-    font-size: 11px;
+    font-weight: 500;
+    font-size: 12px;
+    max-width: 100px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
   }
 
   thead {
     tr {
       th {
-        background-color: #f2f2f2;
-        text-transform: uppercase;
-        margin-top: 10px;
+        color: #667085;
+        font-weight: 700;
       }
     }
-  }
-
-  td {
-    align-items: center;
-    text-align: center;
-  }
-
-  td:hover,
-  tr:hover {
-    background-color: rgb(239, 239, 239);
   }
 }
 
@@ -320,5 +351,4 @@
   display: inline-block;
   margin-left: 5px;
   opacity: 0.9;
-
 }
