--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -2,19 +2,23 @@
   width: 100%;
   padding-bottom: 10px;
 }
+
 .Container_main {
   padding-left: 10px;
   padding-right: 10px;
 }
+
 .mainBody {
   padding: 10px;
 }
+
 .groupButton {
   width: 70%;
   display: flex;
   justify-content: flex-end;
   align-items: end;
 }
+
 .box {
   position: relative;
 }
@@ -33,26 +37,32 @@
 .box:last-child::after {
   display: none;
 }
+
 .mainTextContent {
   padding: 10px;
   display: flex;
   align-items: center;
 }
+
 .textContent_1 {
   width: 30%;
 }
+
 .textContent {
   padding: 15px 10px 10px 20px;
 }
+
 .content {
   font-size: 0.7rem;
   padding-bottom: 5px;
 }
+
 .inputFieldMain {
   //   padding: 0px 0px 0px 20px;
   width: 96%;
   height: 50%;
 }
+
 .inputFields {
   display: flex;
   flex-direction: row;
@@ -60,6 +70,7 @@
   justify-content: center;
   gap: 15%;
 }
+
 .inputField {
   width: 10%;
   height: 50%;
@@ -75,6 +86,7 @@
   justify-content: flex-end;
   cursor: pointer;
 }
+
 .submitButton {
   display: flex;
   flex-direction: row;
@@ -82,6 +94,7 @@
   padding: 0px 30px 15px 0px;
   gap: 10px;
 }
+
 .resetButton {
   color: #848289;
 }
@@ -96,6 +109,7 @@
   color: #848289;
   cursor: not-allowed;
 }
+
 .stock_Container {
   margin: 0 auto;
 }
@@ -109,6 +123,7 @@
   /* Adjust the maximum width as needed */
   // max-height: 550px;
   margin: 2rem auto;
+
   &::-webkit-scrollbar {
     width: 0px;
     background: transparent;
@@ -118,6 +133,7 @@
 .tableContainerIndent {
   width: 95%;
   margin: 2rem auto;
+
   &::-webkit-scrollbar {
     width: 0px;
     background: transparent;
@@ -128,18 +144,21 @@
 .scrollable_table {
   width: 100%;
   height: 100%;
-  padding: 10px 10px; /* Adjust padding */
+  padding: 10px 10px;
+  /* Adjust padding */
   gap: 12px;
   border-collapse: collapse;
 
   th,
   td {
-    padding: 10px 10px 10px 24px; /* Adjust padding */
+    padding: 10px 10px 10px 24px;
+    /* Adjust padding */
     text-align: left;
     font-weight: 500;
     // border: 0px 0px 1px;
     font-size: 12px;
-    border: none; /* Remove borders */
+    border: none;
+    /* Remove borders */
     border-bottom: 0.1px solid #f0f0f0;
   }
 
@@ -156,15 +175,18 @@
       }
     }
   }
+
   td:hover,
   tr:hover {
     /* Add hover styles if needed */
   }
 }
+
 .table_container {
   display: flex;
   justify-content: center;
 }
+
 .scrollable_table_stock_add {
   width: 70%;
   // border-collapse: collapse;
@@ -179,6 +201,7 @@
     font-weight: 500;
     font-size: 11px;
   }
+
   thead {
     tr {
       th {
@@ -194,6 +217,7 @@
     // align-items: center;
     // text-align: center;
   }
+
   td:hover,
   tr:hover {
     background-color: rgb(239, 239, 239);
@@ -203,18 +227,21 @@
 .tableHeading {
   align-items: center;
 }
+
 .buttonContent {
   padding-top: 10px;
   display: flex;
   justify-content: flex-end;
   gap: 1rem;
 }
+
 .addPlan {
   color: #7f56d9;
   font-weight: lighter;
   font-size: x-small;
   cursor: pointer;
 }
+
 .addPlan:hover .addText {
   opacity: 0.5;
 }
@@ -227,6 +254,7 @@
   gap: 30px;
   align-items: center;
 }
+
 .documentOuterLayer {
   width: 40%;
   border: 1px dashed #475467;
@@ -239,12 +267,15 @@
   justify-content: space-between;
   padding: 20px;
 }
+
 .documentSpan {
   font-size: 0.65rem;
 }
+
 .viewFiles {
   padding: 0px 0px 0px 50px;
 }
+
 .listStyles {
   font-size: 0.85rem;
 }
@@ -263,6 +294,7 @@
 .formConatiner {
   padding-top: 10px;
 }
+
 .indent_button {
   display: flex;
   padding-top: 10px;
@@ -276,12 +308,14 @@
   padding-bottom: 10px;
   justify-content: flex-end;
 }
+
 .backButton {
   width: 70%;
   display: flex;
   justify-content: flex-end;
   align-items: end;
 }
+
 .searchField {
   padding: 5px 5px 0px 0px;
   display: flex;
@@ -289,19 +323,23 @@
   justify-content: space-between;
   gap: 10px;
 }
+
 .inputFilter {
   display: flex;
   gap: 10px;
   width: 100%;
   align-items: center;
 }
+
 .filterSelect {
   width: 30%;
 }
+
 .filterButton {
   display: flex;
   gap: 20px;
 }
+
 .searchButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -309,10 +347,12 @@
   gap: 8px;
   color: #6941c6;
 }
+
 .searchButton:hover {
   background-color: #7f56d9;
   color: #ffffff;
 }
+
 .resetButton [disabled] {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -321,6 +361,7 @@
   color: black;
   background-color: #ccc;
 }
+
 .resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
@@ -337,6 +378,7 @@
 .container {
   padding: 10px;
 }
+
 .content_container_left {
   display: flex;
   flex-direction: column;
@@ -344,6 +386,7 @@
   gap: 10px;
   font-weight: bold;
 }
+
 .content_container {
   display: flex;
   flex-direction: column;
@@ -357,12 +400,14 @@
   gap: 7px;
   align-items: center;
 }
+
 .heading {
   display: flex;
   flex-direction: row;
   gap: 15px;
   align-items: center;
 }
+
 .topHeading {
   // background-color: aqua;
   display: flex;
@@ -370,6 +415,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .iconStyle {
   display: flex;
   flex-direction: row;
@@ -382,14 +428,17 @@
   align-items: center;
   cursor: pointer;
 }
+
 .sitelabel {
   color: var(--secondary-color);
 }
-.topHeading{
+
+.topHeading {
   display: flex;
   flex-direction: row;
 }
-.table_data{
+
+.table_data {
   padding: 0px 140px 0px 140px;
 }
 
@@ -399,6 +448,7 @@
   align-items: center;
   cursor: pointer;
 }
+
 .siteCreatelabelAdd {
   display: flex;
   gap: 10px;
@@ -409,22 +459,24 @@
   padding: 5px;
 }
 
-.siteCreateButton{
+.siteCreateButton {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
+
 .sitelabel {
   color: var(--secondary-color);
 }
 
-.subHeading{
+.subHeading {
   display: flex;
   flex-direction: row;
   gap: 7px;
   align-items: center;
 }
-.emptyDataHandling{
+
+.emptyDataHandling {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -432,24 +484,27 @@
   gap: 2px;
 }
 
-.textmin{
+.textmin {
   padding: 10px;
   font-weight: 400;
   font-size: 14px;
 }
 
-.textmax{
+.textmax {
   font-weight: 700;
   font-size: 16px;
 }
-.image{
+
+.image {
   display: flex;
   justify-content: center;
 }
+
 .sub_header {
   height: 10vh;
   display: flex;
 }
+
 .logo {
   font-weight: bold;
   font-size: 16px;
@@ -460,19 +515,29 @@
   width: 5%;
   cursor: pointer;
 }
+
 .vertical {
   position: relative;
 }
+
 .verticalLine::before {
   content: '';
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 1px; /* Adjust the width of the line */
-  background-color: #7d7d7d; /* Adjust the color as needed */
+  width: 1px;
+  /* Adjust the width of the line */
+  background-color: #7d7d7d;
+  /* Adjust the color as needed */
   height: 100%;
 }
+
 .content {
   font-size: 0.7rem;
+  padding-bottom: 5px;
+}
+
+.dividerStyle {
+  border-bottom: 1px solid black;
   padding-bottom: 5px;
 }
