--- a/apps/web/src/styles/newStyles/projectAbstract.module.scss
+++ b/apps/web/src/styles/newStyles/projectAbstract.module.scss
@@ -9,12 +9,14 @@
 }
 .logo {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 12px;
   color: var(--secondary-color);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  padding-left: 10px;
+  gap: 5px;
 }
 .vertical {
   position: relative;
