--- a/apps/web/src/styles/expanses.module.scss
+++ b/apps/web/src/styles/expanses.module.scss
@@ -67,35 +67,42 @@
 
 .scrollable_table {
   width: 100%;
-  border-collapse: collapse;
   height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
 
   th,
   td {
-    border: 1px solid #000000;
+    padding: 10px 10px 10px 24px;
+    /* Adjust padding */
     text-align: left;
-    font-weight: 600;
-    font-size: 11px;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none;
+    /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
   }
 
   thead {
     tr {
       th {
-        background-color: #f2f2f2;
-        text-transform: uppercase;
-        margin-top: 10px;
+        color: #667085;
+        font-weight: 700;
       }
     }
   }
 
-  td {
-    // align-items: center;
-    // text-align: center;
-  }
-
   td:hover,
   tr:hover {
-    background-color: rgb(239, 239, 239);
+    /* Add hover styles if needed */
   }
 }
 
