--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -355,6 +355,15 @@
   cursor: pointer;
   display: flex;
   flex-direction: row;
+  padding: 2px;
+}
+
+.allDocuments{
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: gray;
+  gap: 10px;
 }
 
 .documentOuterLayer {
@@ -375,13 +384,36 @@
 }
 
 .viewFiles {
-  padding: 0px 0px 0px 50px;
+  padding: 10px 30px;
+  width: 40%;
 }
 
-
+.closeIcon {
+  padding: 2px;
+}
 
 .listStyles {
   font-size: 0.85rem;
+}
+
+.selectedFiles {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 2px;
+  padding: 2px;
+  margin: 5px;
+  background-color: #f7f7f7;
+  border: 1px solid #ccc;
+
+}
+
+.fileList {
+  cursor: pointer;
+  color: #333;
+}
+
+.fileList:hover {
+  color: blue; 
 }
 
 .errorStyles {
