--- a/apps/web/src/styles/stockOutwardAdd.module.scss
+++ b/apps/web/src/styles/stockOutwardAdd.module.scss
@@ -55,6 +55,7 @@
     justify-content: flex-start;
     width: 100%;
     gap: 20px;
+    padding-bottom: 10px;
 }
 
 .fields_container_2 {
@@ -69,7 +70,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 40.2%;
+    width: 70%;
     gap: 20px;
 }
 
@@ -171,6 +172,7 @@
 .dividerStyle {
     border-bottom: 1px solid #ccc;
 }
+
 .dividerStyle1 {
     border-bottom: 1px solid #ccc;
     padding: 5px 1px 5px 1px;
@@ -226,38 +228,42 @@
 .scrollable_table {
     width: 100%;
     height: 100%;
-    padding: 10px 10px; /* Adjust padding */
+    padding: 10px 10px;
+    /* Adjust padding */
     gap: 12px;
     border-collapse: collapse;
-  
+
     th,
     td {
-      padding: 10px 10px 10px 24px; /* Adjust padding */
-      text-align: left;
-      font-weight: 500;
-      font-size: 12px;
-      border: none; /* Remove borders */
-      border-bottom: 0.1px solid #f0f0f0;
+        padding: 10px 10px 10px 24px;
+        /* Adjust padding */
+        text-align: left;
+        font-weight: 500;
+        font-size: 12px;
+        border: none;
+        /* Remove borders */
+        border-bottom: 0.1px solid #f0f0f0;
     }
-  
+
     td {
-      border-bottom: 0.1px solid #f0f0f0;
+        border-bottom: 0.1px solid #f0f0f0;
     }
-  
+
     thead {
-      tr {
-        th {
-          color: #667085;
-          font-weight: 700;
+        tr {
+            th {
+                color: #667085;
+                font-weight: 700;
+            }
         }
-      }
     }
+
     td:hover,
     tr:hover {
-      /* Add hover styles if needed */
+        /* Add hover styles if needed */
     }
-  }
-  
+}
+
 
 .tableHeading {
     align-items: center;
@@ -319,4 +325,46 @@
 .content {
     font-size: 0.7rem;
     padding-bottom: 5px;
+}
+
+.topHeading {
+    padding-bottom: 15px;
+}
+
+.heading {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.iconContent {
+    // background-color: #667085;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 10px;
+    padding: 10px;
+}
+
+.lineStyles {
+    padding: 8px;
+    display: flex;
+}
+
+.vertical {
+    position: relative;
+}
+
+.verticalLine::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 1.5px;
+    /* Adjust the width of the line */
+    background-color: #7a7676;
+    /* Adjust the color as needed */
+    height: 100%;
 }
