--- a/apps/web/src/styles/projectFormAddNew.module.scss
+++ b/apps/web/src/styles/projectFormAddNew.module.scss
@@ -15,8 +15,8 @@
   border-bottom: 1px solid #ccc;
 }
 .dividerStyleOne {
-  border-bottom: 1px solid rgb(66, 200, 75);
-  width: 77%;
+  border-bottom: 1px solid rgb(118, 238, 126);
+  width: 65%;
   margin-bottom: 5px;
 }
 .formMainContent {
@@ -99,4 +99,6 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+  justify-content: flex-end;
+  width: 65%;
 }
