--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -107,43 +107,42 @@
   justify-content: end;
 }
 
-
 /* Apply the scrollable_table class to your table element */
 .scrollable_table {
   width: 100%;
   height: 100%;
-  padding: 10px 10px; /* Adjust padding */
+  padding: 10px 10px 10px 10px; /* Adjust padding */
   gap: 12px;
   border-collapse: collapse;
 
-  th,
-  td {
-    padding: 5px 10px 5px 24px; /* Adjust padding */
-    text-align: left;
-    font-weight: 500;
-    // border: 0px 0px 1px;
-    font-size: 12px;
-    border: none; /* Remove borders */
-    border-bottom: 0.1px solid #f0f0f0;
-  }
+  // th,
+  // td {
+  //   padding: 5px 10px 5px 24px; /* Adjust padding */
+  //   text-align: left;
+  //   font-weight: 500;
+  //   // border: 0px 0px 1px;
+  //   font-size: 12px;
+  //   border: none; /* Remove borders */
+  //   border-bottom: 0.1px solid #f0f0f0;
+  // }
 
-  td {
-    border-bottom: 0.1px solid #f0f0f0;
-    // border-bottom :0px, 0px, 1px, 0px
-  }
+  // td {
+  //   border-bottom: 0.1px solid #f0f0f0;
+  //   // border-bottom :0px, 0px, 1px, 0px
+  // }
 
-  thead {
-    tr {
-      th {
-        color: #667085;
-        font-weight: 700;
-      }
-    }
-  }
-  td:hover,
-  tr:hover {
-    /* Add hover styles if needed */
-  }
+  // thead {
+  //   tr {
+  //     th {
+  //       color: #667085;
+  //       font-weight: 700;
+  //     }
+  //   }
+  // }
+  // td:hover,
+  // tr:hover {
+  //   /* Add hover styles if needed */
+  // }
 }
 
 .completedStatus {
@@ -153,17 +152,17 @@
   color: #027a48;
 }
 .inprogressStatus {
-  background-color:#FDF2FA;
+  background-color: #fdf2fa;
   padding: 6px;
   border-radius: 50px;
-  color:  #C11574
+  color: #c11574;
 }
 
 .draftStatus {
-  background-color:#EFF8FF;
+  background-color: #eff8ff;
   padding: 6px;
   border-radius: 50px;
-  color:#175CD3
+  color: #175cd3;
 }
 
 .tablerow {
@@ -175,13 +174,9 @@
   cursor: pointer;
 }
 
-// .tableContainer {
-//   padding: 10px 10px 0px 10px;
-//   // height: 100vh;
-//   display: flex;
-//   flex-direction: column;
-//   gap: 20px;
-// }
+.tableContainer {
+  padding: 10px 10px 0px 10px;
+}
 
 .dashBoardcontainer {
   padding: 2px;
