--- a/apps/web/src/styles/newStyles/purchaseOrderItemsView.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseOrderItemsView.module.scss
@@ -4,6 +4,7 @@
   padding-top: 10px;
   // background-color: #6941c6;
 }
+
 .sub_header {
   height: 10vh;
   display: flex;
@@ -40,6 +41,17 @@
   font-size: small;
 }
 
+.topHeading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.previewButton {
+  padding-right: 20px;
+}
+
 .orderDetails {
   display: flex;
   flex-direction: row;
@@ -53,6 +65,7 @@
   flex-direction: column;
   row-gap: 10px;
 }
+
 .rightOrderDetail {
   display: flex;
   flex-direction: column;
@@ -113,10 +126,12 @@
   tr:hover {
     /* Add hover styles if needed */
   }
+
   tbody {
     tr:nth-child(odd) {
       // background: red;
     }
+
     //even keyword
     tr:nth-child(even) {
       // opacity: .7;
@@ -142,37 +157,44 @@
   flex-direction: column;
   row-gap: 10px;
 }
+
 .rightOrderDetail {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
+
 .secondData {
   background-color: white;
   padding: 10px;
 }
+
 .vendorSiteDetails {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   // background-color:red;
 }
+
 .vendorDetails {
   display: flex;
   flex-direction: row;
   gap: 8px;
   // background-color: blue;
 }
+
 .leftVendorDetail {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
+
 .rightVendorDetail {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
+
 .siteDetail {
   // background-color: yellowgreen;
   display: flex;
@@ -180,20 +202,24 @@
   gap: 5px;
   background-color: white;
 }
+
 .leftSiteDetail {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
+
 .rightSiteDetail {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
+
 .headingData {
   text-align: center;
   padding: 15px;
 }
+
 .allDatas {
   // background-color: green;
   // padding: 0px 0px 20px 0px
@@ -201,4 +227,76 @@
 
 .dashedLine {
   border-left: 0.5px dashed #7d7d7d;
+}
+
+////GRN DETAIL
+.subTableContainer {
+  // padding: 12px 10px 5px 0px;
+  // width: 100%;
+  display: flex;
+  flex-direction: column;
+  // gap: 20px;  
+}
+
+.scrollable_sub_table {
+  // transform: translateX(100px);
+  width: 80%;
+  height: 100%;
+  // padding: 10px 10px;
+  /* Adjust padding */
+  // gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 40px 10px 75px;
+    text-align: left;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
+    border: none;
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+  tbody {
+    tr:nth-child(even) {
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+  .td_desc {
+    min-width: 55.5rem;
+  }
+  thead {
+    tr {
+      th {
+        padding: 10px 40px 10px 75px;
+        color: var(--tableHeader-fontColor);
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+      }
+    }
+  }
+}
+
+.dividerStyle1 {
+  border-bottom: 1px solid #7d7d7d;
+  padding-bottom: 5px;
+}
+
+.footer {
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  padding: 10px 20px 10px 0px;
 }
