--- a/apps/web/src/styles/purchaseRequestView.module.scss
+++ b/apps/web/src/styles/purchaseRequestView.module.scss
@@ -25,7 +25,7 @@
 }
 
 .searchField {
-  padding: 10px 10px 0px 10px;
+  padding: 10px 20px 0px 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -82,7 +82,7 @@
     cursor: pointer;
   }
   .tableContainer {
-    padding: 12px 40px 0px 40px;
+    padding: 12px 20px 0px 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -188,5 +188,10 @@
       border-radius: 50px;
       color: #027a48;
     }
-  
+  }
+
+  .groupButton {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20px;
   }
